Fix HTML encoding issues and update content

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <!-- Shown on load; user must click button to continue -->
   <div id="disclaimer-modal" class="modal-overlay">
     <div class="modal-content">
-      <p class="modal-text">⚠️ After this, merko good morning essay matt bhej dena😭</p>
+      <p class="modal-text">⚠️ Online bakchodi matt kar na kehna pls😭</p>
       <button id="disclaimer-btn" class="modal-btn">Okay I won't 😌</button>
     </div>
   </div>
@@ -193,3 +193,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
