--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Promise Day 💕</title>
+  <title>eheheheh</title>
   <!-- Cute handwritten font for letter; clean font for UI -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -193,4 +193,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
