--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:image" content="NO_IMAGE_URL"/>
   <title>eheheheh</title>
   <!-- Cute handwritten font for letter; clean font for UI -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -193,5 +194,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
